--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "express": "^4.17.1"
   },
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts"
-
   }
 }
